--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.3.3",
+    "@tanstack/react-query": "^4.36.1",
+    "chart.js": "^4.4.1",
     "next": "^14.0.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "viem": "~1.21.4",
     "wagmi": "~1.4.13"
   },
