--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.3.3",
     "@tanstack/react-query": "^4.36.1",
+    "axios": "^1.6.5",
     "chart.js": "^4.4.1",
     "next": "^14.0.4",
     "react": "^18.2.0",
