--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^4.36.1",
     "axios": "^1.6.5",
     "chart.js": "^4.4.1",
+    "ethers": "^6.10.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
