--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ethersproject/bignumber": "^5.7.0",
     "@rainbow-me/rainbowkit": "^1.3.3",
     "@tanstack/react-query": "^4.36.1",
     "axios": "^1.6.5",
